--- a/package.json
+++ b/package.json
@@ -11,44 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@angular/animations": "^6.0.6",
+    "@angular/common": "^6.0.6",
+    "@angular/compiler": "^6.0.6",
+    "@angular/core": "^6.0.6",
+    "@angular/forms": "^6.0.6",
+    "@angular/http": "^6.0.6",
+    "@angular/platform-browser": "^6.0.6",
+    "@angular/platform-browser-dynamic": "^6.0.6",
+    "@angular/router": "^6.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^2.1.2",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "hoek": "^5.0.3",
     "jasmine": "^3.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.2.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
+    "tunnel-agent": "^0.6.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.6",
+    "@angular/language-service": "^6.0.6",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.3.1",
+    "@types/node": "^10.3.5",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.2",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.1.0",
     "protractor": "~5.3.0",
-    "ts-node": "~6.1.0",
+    "ts-node": "^6.2.0",
     "tslint": "~5.10.0",
-    "typescript": "^2.7.2"
+    "typescript": "^2.9.2"
   }
 }
