--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.6",
     "@angular/router": "^6.0.6",
     "@ng-bootstrap/ng-bootstrap": "^2.1.2",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
     "hoek": "^5.0.3",
     "jasmine": "^3.1.0",
@@ -33,7 +33,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.10.5",
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.6",
     "@angular/language-service": "^6.0.6",
@@ -43,12 +43,12 @@
     "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.4",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.1.0",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.1",
     "ts-node": "^6.2.0",
     "tslint": "~5.10.0",
     "typescript": "^2.7.2"
