--- a/package.json
+++ b/package.json
@@ -11,46 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.6",
-    "@angular/common": "^6.0.6",
-    "@angular/compiler": "^6.0.6",
-    "@angular/core": "^6.0.6",
-    "@angular/forms": "^6.0.6",
-    "@angular/http": "^6.0.6",
-    "@angular/platform-browser": "^6.0.6",
-    "@angular/platform-browser-dynamic": "^6.0.6",
-    "@angular/router": "^6.0.6",
-    "@ng-bootstrap/ng-bootstrap": "^2.1.2",
-    "bootstrap": "^4.1.2",
-    "core-js": "^2.5.4",
-    "hoek": "^5.0.3",
-    "jasmine": "^3.1.0",
+    "@angular/animations": "^7.2.11",
+    "@angular/common": "^7.2.11",
+    "@angular/compiler": "^7.2.11",
+    "@angular/core": "^7.2.11",
+    "@angular/forms": "^7.2.11",
+    "@angular/http": "^7.2.11",
+    "@angular/platform-browser": "^7.2.11",
+    "@angular/platform-browser-dynamic": "^7.2.11",
+    "@angular/platform-server": "^7.2.11",
+    "@angular/router": "^7.2.11",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.2",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.6.5",
+    "hoek": "^5.0.4",
+    "jasmine": "^3.3.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
+    "popper.js": "^1.14.7",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "tunnel-agent": "^0.6.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.1",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.6",
-    "@angular/language-service": "^6.0.6",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.3.5",
+    "@angular/compiler-cli": "^7.2.11",
+    "@angular/language-service": "^6.1.10",
+    "@types/jasmine": "^3.3.12",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.14.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.1",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^1.1.0",
-    "protractor": "^5.4.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "^6.2.0",
     "tslint": "~5.10.0",
-    "typescript": "^2.7.2"
+    "typescript": "^3.2.4"
   }
 }
